5_Implement containerized solutions/01_Kubernetes/Hour 9: Kubernetes Ingress – Friendly HTTP Routing/k8s-fullstack/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: ruchuanlin/node-k8s-app:latest
          ports:
            - containerPort: 3000
